# Anime4KCPP

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  LICENSE-MIT  README.cn.md  README.md  readme.md
Anime4KCore/: CMakeLists.txt
Anime4KCore/include/: AC.hpp  ACCPU.hpp  ACCreator.hpp  ACCuda.hpp  ACException.h  ACException.hpp  ACManager.hpp  ACNCNN.hpp  ACNet.h  ACNetHDN.h  ACNetType.hpp  ACOpenCL.hpp  ACProcessor.hpp  ACRegister.hpp  Anime4K.h  Anime4KCPP.h  Anime4KCPP.hpp  Anime4KCPU.h  Anime4KCPUCNN.h  Anime4KGPU.h  Anime4KGPUCNN.h  CNN.h  CNN.hpp  CNNProcessor.h  CPUACNet.hpp  CPUACNetProcessor.hpp  CPUAnime4K09.hpp  CPUCNNProcessor.hpp  CudaACNet.hpp  CudaAnime4K09.hpp  CudaInterface.hpp  FilterProcessor.hpp  NCNNACNet.hpp  NCNNACNetID.hpp  NCNNACNetModel.hpp  OpenCLACNet.hpp  OpenCLACNetKernel.hpp  OpenCLAnime4K09.hpp  OpenCLAnime4K09Kernel.hpp  Parallel.hpp  (+7 more)
Anime4KCore/kernel/: ACNetHDNL1Kernel.cl  ACNetKernel.cl
Anime4KCore/src/: AC.cpp  ACCreator.cpp  ACCuda.cpp  ACNCNN.cpp  ACNet.cpp  ACNetHDN.cpp  ACNetHDNKernel.cl  ACNetHDNL1Kernel.cl  ACNetHDNL2Kernel.cl  ACNetHDNL3Kernel.cl  ACNetKernel.cl  ACOpenCL.cpp  Anime4K.cpp  Anime4KCPP.cpp  Anime4KCPPKernel.cl  Anime4KCPU.cpp  Anime4KCPUCNN.cpp  Anime4KGPU.cpp  Anime4KGPUCNN.cpp  CNN.cpp  CNNProcessor.cpp  CPUACNet.cpp  CPUACNetProcessor.cpp  CPUAnime4K09.cpp  CPUCNNProcessor.cpp  CudaACNet.cpp  CudaAnime4K09.cpp  FilterProcessor.cpp  NCNNACNet.cpp  OpenCLACNet.cpp  OpenCLAnime4K09.cpp  VideoIO.cpp  VideoProcessor.cpp  filterprocessor.cpp
AviSynthPlus/: CMakeLists.txt
AviSynthPlus/src/: Anime4KCPPASP.cpp  Anime4KCPP_ASP.cpp
CLI/: CMakeLists.txt
CLI/include/: Config.hpp  Downloader.hpp
CLI/src/: Downloader.cpp  main.cpp
CWrapper/: CMakeLists.txt
CWrapper/include/: AC.h
CWrapper/src/: CWrapper.cpp
DSFilter/: CMakeLists.txt
DSFilter/include/: ACProp.h  ACuids.h  Anime4KCPPDS.h  resource.h
DSFilter/src/: ACProp.cpp  Anime4KCPPDS.cpp  Anime4KCPPDS.def  Anime4KCPPDS.rc  resource.h
GUI/: CMakeLists.txt
GUI/include/: communicator.h  mainwindow.h
GUI/src/: Anime4KCPP_GUI_fr_FR.ts  Anime4KCPP_GUI_ja_JP.ts  Anime4KCPP_GUI_zh_CN.ts  Anime4KCPP_GUI_zh_TW.ts  communicator.cpp  logo.qrc  main.cpp  mainwindow.cpp  mainwindow.ui
VapourSynth/: CMakeLists.txt
VapourSynth/src/: Anime4KCPPVS.cpp
binding/c/: CMakeLists.txt
binding/c/src/: Binding.cpp
binding/python/: CMakeLists.txt
binding/python/src/: Binding.cpp
cli/: CMakeLists.txt
cli/include/: Options.hpp  ProgressBar.hpp
cli/src/: Main.cpp  Options.cpp  ProgressBar.cpp
core/: CMakeLists.txt
core/include/: AC.hpp  ACCPU.hpp  ACCreator.hpp  ACCuda.hpp  ACException.hpp  ACHip.hpp  ACInitializer.hpp  ACManager.hpp  ACNCNN.hpp  ACNetType.hpp  ACOpenCL.hpp  ACProcessor.hpp  ACRegister.hpp  Anime4KCPP.hpp  Benchmark.hpp  CNN.hpp  CPUACNet.hpp  CPUACNetProcessor.hpp  CPUAnime4K09.hpp  CPUCNNProcessor.hpp  CoreInfo.hpp  CudaACNet.hpp  CudaAnime4K09.hpp  CudaInterface.hpp  FilterProcessor.hpp  HipACNet.hpp  HipAnime4K09.hpp  HipInterface.hpp  NCNNACNet.hpp  NCNNACNetID.hpp  NCNNACNetModel.hpp  OpenCLACNet.hpp  OpenCLACNetKernel.hpp  OpenCLAnime4K09.hpp  OpenCLAnime4K09Kernel.hpp  Parallel.hpp  ThreadPool.hpp  VideoCodec.hpp  VideoIO.hpp  VideoIOAsync.hpp  (+4 more)
core/include/AC/: Core.hpp  Specs.hpp
core/kernels/: ACNetHDNL1Kernel.cl  ACNetHDNL2Kernel.cl  ACNetHDNL3Kernel.cl  ACNetKernel.cl  Anime4KCPPKernel.cl
core/models/: ACNetHDNL0.onnx  ACNetHDNL1.onnx  ACNetHDNL2.onnx  ACNetHDNL3.onnx
core/src/: AC.cpp  ACCreator.cpp  ACCuda.cpp  ACHip.cpp  ACInitializer.cpp  ACNCNN.cpp  ACNet.cpp  ACOpenCL.cpp  Alloc.cpp  CPUACNet.cpp  CPUACNetProcessor.cpp  CPUAnime4K09.cpp  CPUCNNProcessor.cpp  CoreInfo.cpp  CudaACNet.cpp  CudaAnime4K09.cpp  Dispatch.cpp  FilterProcessor.cpp  HipACNet.cpp  HipAnime4K09.cpp  Image.cpp  ImageIO.cpp  ImageProcess.cpp  ImageResize.cpp  Model.cpp  NCNNACNet.cpp  OpenCLACNet.cpp  OpenCLAnime4K09.cpp  Processor.cpp  SIMD.cpp  VideoIO.cpp  VideoIOAsync.cpp  VideoIOConcurrent.cpp  VideoIOSerial.cpp  VideoIOThreads.cpp  VideoProcessor.cpp
core/src/cpu/: CPUProcessor.cpp  Dispatch.cpp  Eigen3.cpp  Generic.cpp
core/src/cuda/: CUDAProcessor.cpp  Kernel.cu
core/src/hip/: HIPProcessor.cpp  Kernel.hip
core/src/opencl/: Kernel.cl  KernelFP16.cl  OpenCLProcessor.cpp
core/src/processor/: Processor.cpp
cuda/: ACNet.cu  CMakeLists.txt  CudaHelper.cuh
cuda/include/: ACNetCommon.cuh  CudaHelper.cuh
cuda/src/: ACNet.cu  ACNetHDNL0.cu  ACNetHDNL1.cu  ACNetHDNL2.cu  ACNetHDNL3.cu  Anime4K09.cu  Manager.cu
filter/: CMakeLists.txt
filter/avisynth/: CMakeLists.txt
filter/avisynth/src/: Filter.cpp
filter/directshow/: CMakeLists.txt
filter/directshow/include/: Registry.hpp  SideData.hpp
filter/directshow/src/: Filter.cpp  Registry.cpp  SideData.cpp
filter/vapoursynth/: CMakeLists.txt
filter/vapoursynth/src/: Filter.cpp
gui/: CMakeLists.txt
gui/include/: Config.hpp  Logger.hpp  MainWindow.hpp  Upscaler.hpp
gui/languages/: ac_gui_zh_CN.ts  ac_gui_zh_Hans.ts  ac_gui_zh_Hant.ts
gui/src/: Config.cpp  Logger.cpp  MainWindow.cpp  QtMain.cpp  Upscaler.cpp
gui/ui/: MainWindow.ui
hip/: CMakeLists.txt
hip/include/: ACNetCommon.hip  ACNetCommon.hpp  CudaHelper.hip  HipHelper.hip
hip/src/: ACNetHDNL0.hip  ACNetHDNL1.hip  ACNetHDNL2.hip  ACNetHDNL3.hip  Anime4K09.hip  Manager.hip
test/core/: CMakeLists.txt
test/core/src/: Benchmark.cpp
test/util/: CMakeLists.txt
test/util/src/: Channel.cpp
test/video/: CMakeLists.txt
test/video/src/: Resize.cpp  Video.cpp
test/wasm/: CMakeLists.txt
test/wasm/src/: Web.cpp
tests/core/: CMakeLists.txt
tests/core/src/: ImageProcessTest.cpp  ImageResizeTest.cpp  ImageTest.cpp  ModelTest.cpp  ProcessorTest.cpp  UtilTest.cpp
tools/benchmark/: CMakeLists.txt
tools/benchmark/src/: Benchmark.cpp
tools/float2half/: CMakeLists.txt
tools/float2half/src/: Float2Half.cpp
util/: CMakeLists.txt
util/misc/: CMakeLists.txt
util/parallel/: CMakeLists.txt
util/threads/: CMakeLists.txt
video/: CMakeLists.txt
video/src/: Filter.cpp  Pipeline.cpp
(+169 files in other folders)
